Opened 9 years ago
Closed 6 years ago
#6781 closed defect (fixed)
MXF Format errors
| Reported by: | AxelTechnology | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | unspecified | Keywords: | MXF |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Hello everyone.
After creating a MXF file with FFmpeg and analyzing it with MXF Inspect (http://www.myriadbits.com/) I get a warning and an error about continuity counters, see the attached report.
How to reproduce:
% ffmpeg -i input.mpg -f mxf output.mxf ffmpeg version N-88042-g72c3d9ae45
Attachments (1)
Change History (13)
by , 9 years ago
| Attachment: | Capture.PNG added |
|---|
comment:1 by , 9 years ago
| Component: | ffmpeg → undetermined |
|---|
comment:2 by , 9 years ago
| Resolution: | → needs_more_info |
|---|---|
| Status: | new → closed |
comment:3 by , 9 years ago
Is there a reason why you cannot paste a few lines of console output into this ticket?
comment:4 by , 9 years ago
the input already had these errors, cannot reproduce with other files.
When the input is correct, the output is good
comment:5 by , 9 years ago
The idea is of course that FFmpeg does not produce invalid output files if possible, not even for invalid input files.
comment:6 by , 9 years ago
| Resolution: | needs_more_info |
|---|---|
| Status: | closed → reopened |
comment:7 by , 9 years ago
tell me if you need the input file and I'll find a way to make it available here as it's too big for an attachment
here you go:
ffmpeg -i input.mxf -ss 0 -pix_fmt yuv422p -vcodec mpeg2video -s 1920x1080 -b:v 50000k -maxrate 50000k -bufsize 3835k -minrate 50000k -r 25 -aspect 16:9 -flags ilme -top 1 -acodec pcm_s24le -ar 48000 -y output.mxf
ffmpeg version N-88042-g72c3d9ae45 Copyright (c) 2000-2017 the FFmpeg developers
built with gcc 7.2.0 (GCC)
configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-bzlib --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvorbis --enable-cuda --enable-cuvid --enable-d3d11va --enable-nvenc --enable-dxva2 --enable-avisynth --enable-libmfx
libavutil 56. 0.100 / 56. 0.100
libavcodec 58. 0.100 / 58. 0.100
libavformat 58. 0.100 / 58. 0.100
libavdevice 58. 0.100 / 58. 0.100
libavfilter 7. 0.100 / 7. 0.100
libswscale 5. 0.100 / 5. 0.100
libswresample 3. 0.100 / 3. 0.100
libpostproc 55. 0.100 / 55. 0.100
Guessed Channel Layout for Input Stream #0.1 : mono
Guessed Channel Layout for Input Stream #0.2 : mono
Input #0, mxf, from 'input.mxf':
Metadata:
uid : adab4424-2f25-4dc7-92ff-29bd000c0000
generation_uid : adab4424-2f25-4dc7-92ff-29bd000c0001
company_name : FFmpeg
product_name : OP1a Muxer
product_version : 57.79.100
product_uid : adab4424-2f25-4dc7-92ff-29bd000c0002
material_package_umid: 0x060A2B340101010501010D0013692CA252947134D9692CA20052947134D96900
timecode : 17:49:42:16
Duration: 00:00:03.32, start: 0.000000, bitrate: 45120 kb/s
Stream #0:0: Video: mpeg2video (4:2:2), yuv422p(tv, top first), 1920x1080 [SAR 1:1 DAR 16:9], 25 fps, 25 tbr, 25 tbn, 50 tbc
Metadata:
file_package_umid: 0x060A2B340101010501010D0013692CA252947134D9692CA20052947134D96901
Stream #0:1: Audio: pcm_s24le, 48000 Hz, mono, s32 (24 bit), 1152 kb/s
Metadata:
file_package_umid: 0x060A2B340101010501010D0013692CA252947134D9692CA20052947134D96901
Stream #0:2: Audio: pcm_s24le, 48000 Hz, mono, s32 (24 bit), 1152 kb/s
Metadata:
file_package_umid: 0x060A2B340101010501010D0013692CA252947134D9692CA20052947134D96901
Stream mapping:
Stream #0:0 -> #0:0 (mpeg2video (native) -> mpeg2video (native))
Stream #0:1 -> #0:1 (pcm_s24le (native) -> pcm_s24le (native))
Press [q] to stop, [?] for help
Output #0, mxf, to 'output.mxf':
Metadata:
uid : adab4424-2f25-4dc7-92ff-29bd000c0000
generation_uid : adab4424-2f25-4dc7-92ff-29bd000c0001
company_name : FFmpeg
product_name : OP1a Muxer
product_version : 57.79.100
product_uid : adab4424-2f25-4dc7-92ff-29bd000c0002
material_package_umid: 0x060A2B340101010501010D0013692CA252947134D9692CA20052947134D96900
timecode : 17:49:42:16
encoder : Lavf58.0.100
Stream #0:0: Video: mpeg2video (4:2:2), yuv422p, 1920x1080 [SAR 1:1 DAR 16:9], q=2-31, 50000 kb/s, 25 fps, 25 tbn, 25 tbc
Metadata:
file_package_umid: 0x060A2B340101010501010D0013692CA252947134D9692CA20052947134D96901
encoder : Lavc58.0.100 mpeg2video
Side data:
cpb: bitrate max/min/avg: 50000000/50000000/50000000 buffer size: 3835000 vbv_delay: -1
Stream #0:1: Audio: pcm_s24le, 48000 Hz, mono, s32 (24 bit), 1152 kb/s
Metadata:
file_package_umid: 0x060A2B340101010501010D0013692CA252947134D9692CA20052947134D96901
encoder : Lavc58.0.100 pcm_s24le
frame= 83 fps=0.0 q=2.0 Lsize= 20724kB time=00:00:03.32 bitrate=51134.7kbits/s speed=4.02x
video:20147kB audio:467kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.533839%
comment:8 by , 9 years ago
Feel free to upload the input sample to dropbox, datafilehost, https://streams.videolan.org/upload/ or a file hoster of your choice.
comment:9 by , 9 years ago
Here's the input file
https://streams.videolan.org/ffmpeg/incoming/6781/input.mxf
comment:12 by , 6 years ago
| Resolution: | → fixed |
|---|---|
| Status: | reopened → closed |
Fixed in 121b6c7aa741edbe976dd9ff2ad25b85baabe61b.



This has currently no similarities with a valid bug report.
Please provide the FFmpeg command line you tested together with the complete, uncut console output (don't forget that only current FFmpeg git head is supported here) and the used input file.